# edge-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: __init__.py  main.py
app/alarms/: __init__.py  adam6050.py  aepel_speaker.py  base.py  iologik_e1211.py  la6_poe.py
app/api/: __init__.py
app/api/v2/: __init__.py  apps.py  auth.py  cameras.py  eventpushes.py  events.py  inference.py  license.py  (+11 more)
app/core/: config.py  deps.py  security.py
app/db/: base.py  models_registry.py  seed.py  session.py
app/grpc/: __init__.py  autocare_pb2.py  autocare_pb2_grpc.py  detector_client.py
app/models/: __init__.py  app.py  camera.py  event.py  event_setting.py  eventpush.py  image.py  inference.py  mediamtx_settings.py  mx.py  protocol.py  registry.py  sensor.py  subscription.py  user.py  video.py
app/schemas/: __init__.py  app.py  auth.py  camera.py  event.py  eventpush.py  inference.py  mediamtx_settings.py  mx.py  protocol.py  registry.py  sensor.py  statistics.py  system.py  video.py
app/services/: __init__.py  auth_service.py  base_service.py  event_service.py  eventpush_service.py  inference_service.py  mx_service.py  registry_service.py  stream_service.py  user_service.py  video_service.py
app/workers/: __init__.py  alarm_service.py  event_retention.py  eventpush_worker.py  image_retention.py  nats_publisher.py  nats_subscriber.py  nats_wakeup_service.py
data/: DxApi.db
migrations/: env.py
tests/: conftest.py  test_auth.py  test_eventpushes.py  test_events.py  test_inference.py  test_services.py  test_videos.py
(+1 files in other folders)
